# hashmap

./: .gitignore  Doxyfile  README.md  hashmap.wrap  meson.build
include/: fnv1_32.h  hashmap.h
src/: example.c  fnv1_32.c  fnv1_64.c  fnv1_64.h  hashmap.c
